--- a/barberCard/appointment/agendar.html
+++ b/barberCard/appointment/agendar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="agendar.css">
+    <link rel="stylesheet" href="../static/agendar.css">
     <title>Agendar</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
     </div>
 
     <div id="voltar">
-        <a href="index.html">Página anterior</a> 
+        <a href="../home/index.html">Página anterior</a> 
     </div>
     
 </body>
